[gd_scene load_steps=3 format=3 uid="uid://dfwfiscg0glrr"]

[ext_resource type="Script" uid="uid://caobighhsib0k" path="res://scripts/Display.gd" id="1_dudek"]
[ext_resource type="Script" uid="uid://c00dmqbwcsdsq" path="res://scripts/GameManager.gd" id="2_e618a"]

[node name="Display" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 102.0
offset_top = 55.0
offset_right = 102.0
offset_bottom = 55.0
script = ExtResource("1_dudek")

[node name="PlayerIndicatorsParent" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -101.0
offset_top = -54.0
offset_right = 651.0
offset_bottom = 429.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 149.0
offset_top = 111.0
offset_right = 288.0
offset_bottom = 246.0

[node name="EventAlertLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="PowerGridStatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Power Grid Status"

[node name="EnergyBarContainer" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="EnergyBar" type="ProgressBar" parent="VBoxContainer/EnergyBarContainer"]
layout_mode = 0
offset_left = -4.0
offset_top = 95.0
offset_right = 149.0
offset_bottom = 122.0
value = 50.0

[node name="SafeZoneTop" type="ColorRect" parent="VBoxContainer/EnergyBarContainer"]
layout_mode = 0
offset_left = 221.0
offset_top = 22.0
offset_right = 261.0
offset_bottom = 62.0

[node name="SafeZoneBottom" type="ColorRect" parent="VBoxContainer/EnergyBarContainer"]
layout_mode = 0
offset_left = 222.0
offset_top = -27.0
offset_right = 262.0
offset_bottom = 13.0

[node name="EnergyLevelText" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "50%"

[node name="StatusText" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Waiting..."

[node name="CoopProgressText" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Stability Goal: ..."

[node name="ResetButtonContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 281.0
offset_top = 40.0
offset_right = 382.0
offset_bottom = 84.0

[node name="ResetButton" type="Button" parent="ResetButtonContainer"]
layout_mode = 2
text = "Start Again?"

[node name="GameManager" type="Node" parent="."]
script = ExtResource("2_e618a")

[node name="EventCheckTimer" type="Timer" parent="GameManager"]

[node name="EventDurationTimer" type="Timer" parent="GameManager"]
